# OMiCroN

./: .gitignore  README.md  omicron.code-workspace
src/: .stxxl  CMakeLists.txt  HierarchyCreationLog.txt  HierarchyCreator.h  main.cpp
src/cmake/: FindJsoncpp.cmake  FindTBB.cmake
src/cpp/: main.cpp
src/cpp/model/: Allocator.cpp  BitMapMemoryManager.cpp  BitMapMemoryPool.cpp  Camera.cpp  ExtendedPoint.cpp  Frustum.cpp  GpuAllocStatistics.cpp  HierarchyCreationLog.cpp  IMemoryManager.cpp  InnerNode.cpp  LeafNode.cpp  MemoryManager.cpp  MortonCode.cpp  Octree.cpp  OctreeNode.cpp  Point.cpp  QtRenderingState.cpp  RenderingState.cpp  Scan.cpp  TbbAllocator.cpp  TransientRenderingState.cpp  TucanoRenderingState.cpp  global_new_delete.cpp
src/cpp/ui/: GLHiddenWidget.cpp  MainWindow.cpp  OpenGLWindow.cpp  PointRendererWidget.cpp  PointRendererWindow.cpp
src/cpp/util/: MemoryInfo.cpp  PlyPointReader.cpp  PlyPointWritter.cpp  Stream.cpp  vsGLInfoLib.cpp
src/data/: README
src/data/tests/: extended_point_octree.ply  simple_point_octree.ply  test_normals.ply
src/header/model/: Array.h  AssyncRenderingState.h  BasicTypes.h  BitMapAllocator.h  BitMapMemoryManager.h  BitMapMemoryPool.h  Camera.h  CompactionFrontBehavior.h  CompactionFrontOctree.h  CompactionFrontWrapper.h  CompactionRenderingState.h  ConcurrentOctreeMapTypes.h  DefaultManagedAllocator.h  ExtendedPoint.h  ExtendedPointNodeLoaderThread.h  FastParallelOctree.h  FreeListPool.h  Front.h  FrontBehavior.h  FrontOctree.h  FrontWrapper.h  Frustum.h  GpuAllocStatistics.h  GpuLoader.h  GpuLoaderThread.h  HierarchyCreationLog.h  HierarchyCreator.h  IMemoryManager.h  IMemoryPool.h  IndexedOctree.h  IndexedTucanoRenderer.h  InnerNode.h  Ken12MemoryManager.h  Ken12MemoryPool.h  LeafNode.h  ManagedAllocator.h  MemoryManager.h  MemoryManagerTypes.h  MemoryPool.h  MemoryUtils.h  (+51 more)
src/header/ui/: GLHiddenWidget.h  MainWindow.h  PointRendererWidget.h  PointRendererWindow.h  mainwindow.ui
src/header/util/: HeapPointReader.h  IdNode.h  InMemPointReader.h  MemoryInfo.h  OglUtils.h  OutOfCorePlyPointReader.h  PartialSortPointReader.h  PlyPointReader.h  PlyPointWritter.h  PointReader.h  Profiler.h  SQLiteHelper.h  SQLiteManager.h  SQLiteQuery.h  SortPointReader.h  StackTrace.h  Stream.h
src/lib/: CMakeLists.txt
src/lib/rply/: CMakeLists.txt
src/lib/tbb/: libtbb.so.2  libtbbmalloc.so.2
src/lib/tlsf/: CMakeLists.txt  tlsf.h
src/model/header/: Camera.h
src/model/src/: Camera.cpp
src/omicron/: main.cpp
src/omicron/basic/: array.h  basic_types.h  morton_code.cpp  morton_code.h  morton_comparator.h  morton_interval.h  point.cpp  point.h  stream.cpp  stream.h
src/omicron/deprecated/: FreeListPool.h  FrontBehavior.h  IMemoryManager.cpp  IMemoryPool.h  IdNode.h  Ken12MemoryManager.h  Ken12MemoryPool.h  MemoryInfo.h  NodeReleaser.h  ParallelFrontBehavior.h  PointAppender.h  PointSetReduction.h  SQLiteQuery.h  Scan.cpp  Scan.h  TLSFManager.h  TLSFPool.h  camera.cpp  camera.h  node_loader_thread.h
src/omicron/disk/: external_sort_reader.h  heap_point_reader.h  octree_file.h  ooc_point_sorter.h  partial_sort_point_reader.h  ply_face_reader.h  ply_point_face_writer.h  ply_point_merger.h  ply_point_reader.h  ply_point_writter.h  point_reader.h  point_set.h  point_sorter.h  serializer.h  sort_point_reader.h
src/omicron/hierarchy/: bvh.h  dim_origin_scale.h  external_octree_data.cpp  external_octree_data.h  external_vector_types.h  fast_parallel_octree.h  front.h  front_octree.h  gpu_alloc_statistics.cpp  gpu_alloc_statistics.h  hierarchy_creation_log.cpp  hierarchy_creation_log.h  hierarchy_creator.h  node_loader.h  node_loader_thread.h  o1_octree_node.h  octree_dim_calculator.h  octree_dimensions.h  octree_file.h  octree_stats.h  reconstruction_params.h  runtime_setup.h  text_effect.h  top_down_front_octree.h
src/omicron/memory/: global_new_delete.cpp  managed_allocator.h  memory_utils.h  tbb_allocator.cpp  tbb_allocator.h
src/omicron/renderer/: assync_rendering_state.h  indexed_tucano_renderer.h  ogl_utils.h  rendering_state.cpp  rendering_state.h  streaming_renderer.h  text_effect.h  tucano_debug_renderer.h  tucano_rendering_state.cpp  tucano_rendering_state.h  vsgl_info_lib.cpp  vsgl_info_lib.h
src/omicron/ui/: gl_hidden_widget.cpp  main_window.cpp  main_window.h  point_renderer_widget.cpp  point_renderer_widget.h
src/omicron/util/: profiler.h  stack_trace.h
src/results/: Create_structured_results.sh
src/scripts/: Create_structured_results.sh  datasetExtractor.sh  datasetGetter.sh  groupCreator.sh  normalCalculator.sh  normalFlipper.sh  profiled_tri_convert.sh
src/shaders/: GlobalScan.comp  PerBlockScan.comp  PerVertColor.frag  PerVertColor.vert  PointCompaction.comp  PointCompactor.comp  PrefixSum.comp  Sum.comp  Text.frag  Text.vert  Text2D.frag  Text2D.vert
src/test/: CMakeLists.txt  StressTest.bash  main.cpp
src/test/basic/: morton_code_test.cpp  morton_interval_test.cpp
src/test/cpp/: FastParallelOctreeStressParam.cpp  FastParallelOctreeTestParam.cpp  main.cpp
src/test/data/: OocPointSorterTest.gp  simple_point_octree.ply  test.ply  test_extended_points.ply
src/test/deprecated/: camera_test.cpp  compaction_qgl_view.cpp  compaction_qgl_view.h  fast_parallel_octree_test.cpp  scan_qgl_view.h  scan_test.cpp  sqlite_manager_test.cpp
src/test/disk/: heap_point_reader_test.cpp  octree_file_test.cpp  point_sorter_test.cpp  serializer_test.cpp
src/test/header/: FastParallelOctreeStressParam.h  FastParallelOctreeTestParam.h  MockRenderer.h
src/test/hierarchy/: fast_parallel_octree_stress_test.cpp  fast_parallel_octree_test_param.cpp  fast_parallel_octree_test_param.h  hierarchy_creator_no_render_test.cpp  o1_octree_node_test.cpp
src/test/memory/: tbb_allocator_test.cpp
src/test/renderer/: frustum_test.cpp  mock_renderer.h  splat_renderer_test.cpp  text_3d_test.cpp  text_test.cpp
src/test/ui/: text_3d_test_widget.cpp  text_3d_test_widget.h  text_test_widget.cpp  text_test_widget.h
src/ui/header/: OpenGLWindow.h  PointRendererWindow.h
src/ui/src/: OpenGLWindow.cpp  PointRendererWindow.cpp
(+433 files in other folders)
